--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,14 +64,14 @@
             android:padding="12dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="@color/teal_700"
-            android:text="@string/txt_signin"
+            android:text="@string/txt_sign_in"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/tv_forgot_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@id/v_signup"
+            android:layout_above="@id/v_sign_up"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="100dp"
             android:gravity="center"
@@ -80,7 +80,7 @@
             android:textSize="18sp" />
 
         <LinearLayout
-            android:id="@+id/v_signup"
+            android:id="@+id/v_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
