--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="20dp">
+        android:layout_margin="@dimen/margin_20dp">
 
         <ImageView
             android:id="@+id/edt_ferrari_logo"
@@ -34,58 +34,58 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_ferrari_logo"
             android:drawableStart="@drawable/ic_name_tint"
-            android:drawablePadding="20dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="20dp"
+            android:drawablePadding="@dimen/margin_20dp"
+            android:layout_marginTop="@dimen/margin_40dp"
+            android:layout_marginBottom="@dimen/margin_20dp"
             android:hint="@string/hint_name"
-            android:textSize="20sp" />
+            android:textSize="@dimen/font_size_20sp" />
 
         <EditText
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_name"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="@dimen/margin_20dp"
             android:drawableStart="@drawable/ic_username_tint"
-            android:drawablePadding="20dp"
+            android:drawablePadding="@dimen/margin_20dp"
             android:hint="@string/hint_username"
-            android:textSize="20sp" />
+            android:textSize="@dimen/font_size_20sp" />
 
         <EditText
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_password_tint"
-            android:drawablePadding="20dp"
+            android:drawablePadding="@dimen/margin_20dp"
             android:layout_below="@id/edt_username"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="@dimen/margin_20dp"
             android:hint="@string/hint_password"
-            android:textSize="20sp" />
+            android:textSize="@dimen/font_size_20sp" />
 
         <EditText
             android:id="@+id/edt_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_confirm_password_tint"
-            android:drawablePadding="20dp"
+            android:drawablePadding="@dimen/margin_20dp"
             android:layout_below="@id/edt_password"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="@dimen/margin_40dp"
             android:hint="@string/hint_confirm_password"
-            android:textSize="20sp" />
+            android:textSize="@dimen/font_size_20sp" />
 
         <Button
             android:id="@+id/btn_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/edt_confirm_password"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="@dimen/margin_20dp"
             android:backgroundTint="@color/teal_700"
-            android:padding="12dp"
-            android:text="Sign Up"
-            android:textSize="20sp" />
+            android:padding="@dimen/padding_12dp"
+            android:text="@string/txt_sign_up"
+            android:textSize="@dimen/font_size_20sp" />
 
         <LinearLayout
-            android:id="@+id/v_signup"
+            android:id="@+id/v_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_sign_up"
@@ -96,18 +96,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Already Have An Account?"
+                android:text="@string/txt_already_have_an_account"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_size_18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:gravity="center"
-                android:text="Sign In"
+                android:text="@string/txt_sign_in"
                 android:textColor="@color/teal_700"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_size_18sp" />
 
         </LinearLayout>
     </RelativeLayout>
