--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:tint="@color/black_faded"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_1" />
+        android:src="@drawable/img_1"
+        android:tint="@color/black_faded" />
 
 
     <RelativeLayout
@@ -52,6 +52,7 @@
             android:drawableStart="@drawable/ic_password_tint"
             android:drawablePadding="20dp"
             android:hint="@string/hint_password"
+            android:inputType="textPassword"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
@@ -60,12 +61,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/tv_forgot_password"
-            android:textSize="20dp"
-            android:padding="12dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="@color/teal_700"
+            android:padding="12dp"
             android:text="@string/txt_sign_in"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/tv_forgot_password"
@@ -97,8 +98,10 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_8dp"
                 android:gravity="center"
                 android:text="@string/txt_sign_up_here"
                 android:textColor="@color/teal_700"
