--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="margin_6dp">6dp</dimen>
+    <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="margin_2dp">2dp</dimen>
     <dimen name="margin_40dp">40dp</dimen>
+    <dimen name="margin_80dp">80dp</dimen>
+    <dimen name="margin_60dp">60dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
     <dimen name="font_size_20sp">20sp</dimen>
     <dimen name="font_size_18sp">18sp</dimen>
     <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="divider_height">0.5dp</dimen>
+    <dimen name="banner_height_120dp">120dp</dimen>
 </resources>
